fix flex-wrap

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 #root {
+  font-family: 'Roboto', sans-serif;
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
@@ -28,5 +30,7 @@
   @media (min-width: 768px) {
    flex-direction: row; 
    flex-wrap: wrap;
+
+   margin: 0 10%;
   }
 }
